# bumperbot_ws

./: .gitignore  frames_2024-10-07_14.53.12.gv  frames_2024-10-07_21.45.17.gv  frames_2024-10-08_10.47.20.gv
install/: local_setup.sh  setup.sh
install/bumperbot_controller/share/bumperbot_controller/: local_setup.sh  package.sh  package.xml
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: local_setup.sh  package.sh
log/: latest_build  latest_list
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/bumperbot_controller/: simple_controller.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_config.yaml  joy_teleop.yaml
src/bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/bumperbot_cpp_examples/: package.xml
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/launch/: display.launch.py
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
src/bumperbot_msgs/: CMakeLists.txt  package.xml
src/bumperbot_msgs/srv/: AddTwoInts.srv
src/bumperbot_py_examples/: package.xml  setup.py
src/bumperbot_py_examples/bumperbot_py_examples/: simple_service_client.py  simple_service_server.py  simple_tf_kinematics.py  simple_turtlesim_kinematics.py
src/bumperbot_utils/: package.xml  setup.cfg  setup.py
src/bumperbot_utils/bumperbot_utils/: bumperbot_trajectory.py
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
(+23 files in other folders)
